--- a/index.html
+++ b/index.html
@@ -2,60 +2,68 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Ageflix - Age Detection</title>
+<title>Ageflix - Home</title>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image"></script>
+<style>
+body { background: black; color: white; font-family: sans-serif; text-align:center;}
+nav a { margin: 0 10px; color: red; text-decoration:none; font-weight:bold;}
+#webcam-container canvas { margin-top:20px; border: 3px solid red; }
+button { margin-top: 10px; padding: 10px 20px; background:red; color:white; border:none; cursor:pointer;}
+</style>
 </head>
 <body>
 
-<h1>Age Detection</h1>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="movies-kid.html">Kid</a>
+  <a href="movies-adult.html">Adult</a>
+  <a href="movies-senior.html">Senior</a>
+  <a href="about.html">About</a>
+</nav>
+
+<h1>Welcome to Ageflix</h1>
+<p>Detect your age and see recommended movies!</p>
+
 <div id="webcam-container"></div>
 <button id="detectBtn">Detect Age</button>
 <p id="ageResult"></p>
 
 <script>
-const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/"; // رابط الموديل
+const modelURL = "https://teachablemachine.withgoogleusercontent.com/models/UujRQ_OS4/model.json";
+const metadataURL = "https://teachablemachine.withgoogleusercontent.com/models/UujRQ_OS4/metadata.json";
 
-let model, webcam, maxPredictions;
+let model, webcam;
 
 async function init() {
-  const modelURL = URL + "model.json";
-  const metadataURL = URL + "metadata.json";
-  
-  model = await tmImage.load(modelURL, metadataURL);
-  maxPredictions = model.getTotalClasses();
-
-  webcam = new tmImage.Webcam(320, 240, true);
-  await webcam.setup();
-  await webcam.play();
-  document.getElementById("webcam-container").appendChild(webcam.canvas);
-
-  window.requestAnimationFrame(loop);
+    model = await tmImage.load(modelURL, metadataURL);
+    webcam = new tmImage.Webcam(320, 240, true);
+    await webcam.setup();
+    await webcam.play();
+    document.getElementById("webcam-container").appendChild(webcam.canvas);
+    window.requestAnimationFrame(loop);
 }
 
 async function loop() {
-  webcam.update();
-  window.requestAnimationFrame(loop);
+    webcam.update();
+    window.requestAnimationFrame(loop);
 }
 
 document.getElementById("detectBtn").addEventListener("click", async () => {
-  const prediction = await model.predict(webcam.canvas);
-  let highest = prediction[0];
-  for(let i=0;i<prediction.length;i++){
-    if(prediction[i].probability > highest.probability){
-      highest = prediction[i];
+    const prediction = await model.predict(webcam.canvas);
+    let highest = prediction[0];
+    for(let i=1;i<prediction.length;i++){
+        if(prediction[i].probability > highest.probability) highest = prediction[i];
     }
-  }
+    document.getElementById("ageResult").textContent = "Detected Age Group: " + highest.className;
 
-  document.getElementById("ageResult").textContent = `Detected Age Group: ${highest.className}`;
-
-  // Redirect based on age
-  if(highest.className.toLowerCase() === "kid") window.location.href = "movies-kid.html";
-  else if(highest.className.toLowerCase() === "adult") window.location.href = "movies-adult.html";
-  else if(highest.className.toLowerCase() === "senior") window.location.href = "movies-senior.html";
+    if(highest.className.toLowerCase() === "kid") window.location.href = "movies-kid.html";
+    else if(highest.className.toLowerCase() === "adult") window.location.href = "movies-adult.html";
+    else if(highest.className.toLowerCase() === "senior") window.location.href = "movies-senior.html";
 });
 
 init();
 </script>
+
 </body>
 </html>
