--- a/index.html
+++ b/index.html
@@ -31,44 +31,7 @@
   <h2 id="ageResult" class="age-text"></h2>
 </main>
 
-<script>
-const URL = "model/"; // مجلد الموديل على GitHub
-let model, webcam;
-
-// تحميل الموديل والتأكد من نجاحه
-async function loadModel() {
-  try {
-    model = await tmImage.load(URL + "model.json", URL + "metadata.json");
-    console.log("Model loaded successfully");
-  } catch (error) {
-    console.error("Failed to load the model:", error);
-    alert("Error loading model. Check console and make sure model folder exists with correct files.");
-  }
-}
-
-// بدء الكاميرا والتنبؤ
-async function init() {
-  await loadModel();
-
-  webcam = new tmImage.Webcam(320, 240, true);
-  await webcam.setup();
-  webcam.play();
-  document.getElementById("webcam-container").appendChild(webcam.canvas);
-  window.requestAnimationFrame(loop);
-}
-
-// حلقة التنبؤ المستمر
-async function loop() {
-  webcam.update();
-  const prediction = await model.predict(webcam.canvas);
-  const top = prediction.reduce((prev, curr) => prev.probability > curr.probability ? prev : curr);
-  document.getElementById("ageResult").innerText = `Detected Age: ${top.className}`;
-  window.requestAnimationFrame(loop);
-}
-
-document.getElementById("startCamera").addEventListener("click", () => {
-  init();
-});
-</script>
+<!-- ربط ملف الجافا سكريبت -->
+<script src="app.js"></script>
 </body>
 </html>
