--- a/index.html
+++ b/index.html
@@ -5,34 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AgeFlix - التحقق من العمر</title>
   <style>
-    body { text-align: center; font-family: sans-serif; direction: rtl; background: #111; color: #fff; }
-    video { border-radius: 10px; margin-top: 20px; }
-    #status { margin-top: 15px; font-size: 18px; }
+    body {
+      text-align: center;
+      font-family: "Cairo", sans-serif;
+      direction: rtl;
+      background-color: #0e0e0e;
+      color: #fff;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      margin-bottom: 5px;
+    }
+    p {
+      color: #ccc;
+      margin-top: 0;
+      margin-bottom: 15px;
+    }
+    video {
+      border-radius: 10px;
+      margin-top: 15px;
+      border: 2px solid #444;
+    }
+    #status {
+      margin-top: 15px;
+      font-size: 18px;
+    }
+    #manualSelect {
+      display: none;
+      margin-top: 20px;
+    }
+    select, button {
+      padding: 10px;
+      margin: 5px;
+      border-radius: 6px;
+      border: none;
+      font-size: 16px;
+    }
+    button {
+      background: #e50914;
+      color: white;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <h1>🎬 مرحباً بك في AgeFlix</h1>
-  <p>سيتم التعرف على فئتك العمرية تلقائياً لتظهر لك الأفلام المناسبة</p>
+  <p>سيتم التعرّف على فئتك العمرية تلقائيًا لتظهر لك الأفلام المناسبة</p>
 
   <video id="webcam" width="320" height="240" autoplay muted playsinline></video>
-  <div id="status">جاري تحميل النموذج...</div>
+  <div id="status">📸 جارٍ تحميل النموذج...</div>
 
+  <div id="manualSelect">
+    <p>لم يتم السماح بالكاميرا. يمكنك اختيار فئتك يدويًا:</p>
+    <select id="ageGroup">
+      <option value="kids.html">👶 طفل (Kid)</option>
+      <option value="adult.html">🧑 بالغ (Adult)</option>
+      <option value="senior.html">👴 كبير السن (Senior)</option>
+    </select>
+    <button onclick="manualRedirect()">اذهب</button>
+  </div>
+
+  <!-- مكتبة Teachable Machine -->
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <script>
-    const URL = "./model/"; // مجلد النموذج اللي نزلتيه
+    const URL = "./model/";
     let model, webcam;
 
     async function init() {
-      const modelURL = URL + "model.json";
-      const metadataURL = URL + "metadata.json";
+      try {
+        const modelURL = URL + "model.json";
+        const metadataURL = URL + "metadata.json";
 
-      model = await tmImage.load(modelURL, metadataURL);
-      webcam = new tmImage.Webcam(320, 240, true);
-      await webcam.setup();
-      await webcam.play();
-      document.getElementById("webcam").appendChild(webcam.canvas);
-      window.requestAnimationFrame(loop);
-      document.getElementById("status").innerText = "تم التشغيل، جاري التعرّف...";
+        model = await tmImage.load(modelURL, metadataURL);
+
+        webcam = new tmImage.Webcam(320, 240, true);
+        await webcam.setup(); // يطلب إذن الكاميرا
+        await webcam.play();
+        document.getElementById("webcam").appendChild(webcam.canvas);
+        document.getElementById("status").innerText = "✅ الكاميرا تعمل، جاري التعرّف...";
+        window.requestAnimationFrame(loop);
+      } catch (err) {
+        console.error("Camera error:", err);
+        document.getElementById("status").innerText = "❌ لم يتم السماح بالكاميرا.";
+        document.getElementById("manualSelect").style.display = "block";
+        alert("⚠️ لم يتم السماح بالكاميرا.\nاذهبي إلى إعدادات المتصفح > الكاميرا > السماح، ثم أعيدي تحميل الصفحة.\n\nأو اختاري فئتك يدويًا من القائمة بالأسفل.");
+      }
     }
 
     async function loop() {
@@ -45,11 +103,9 @@
       const predictions = await model.predict(webcam.canvas);
       predictions.sort((a, b) => b.probability - a.probability);
       const top = predictions[0];
+      document.getElementById("status").innerText = `الفئة: ${top.className} (ثقة ${(top.probability * 100).toFixed(1)}%)`;
 
-      document.getElementById("status").innerText =
-        `الفئة: ${top.className} (ثقة: ${(top.probability * 100).toFixed(1)}%)`;
-
-      if (top.probability > 0.8) {
+      if (top.probability > 0.85) {
         if (top.className.toLowerCase().includes("kid")) {
           window.location.href = "kids.html";
         } else if (top.className.toLowerCase().includes("adult")) {
@@ -60,11 +116,12 @@
       }
     }
 
-    init().catch(err => {
-      console.error(err);
-      document.getElementById("status").innerText = "حدث خطأ أو لم يتم السماح بالكاميرا.";
-    });
+    function manualRedirect() {
+      const page = document.getElementById("ageGroup").value;
+      window.location.href = page;
+    }
+
+    init();
   </script>
 </body>
 </html>
-
